Bugfix - Doesnt get stuck on loading page when error occurs

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -268,6 +268,7 @@ body {
 }
 
 .fiveday__desc {
+  flex: 1;
   text-align: center;
 }
 
